# fastapi-service-template

./: .gitignore  Dockerfile  alembic.ini  pyproject.toml
app/: config.py  main.py  utils.py
app/api/: router.py
app/dals/: __init__.py  base.py
app/db/: __init__.py  session.py
app/models/: __init__.py  base.py
app/repos/: base.py
app/schemas/: __init__.py  base.py
migrations/: env.py  script.py.mako
