[tool.poetry]
name = "fastapi-service-template"
version = "0.1.0"
description = "A template to create microservices"
authors = ["lastdarknes <murashov.timofey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
uvicorn = "^0.28.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
black = "^24.3.0"
isort = "^5.13.2"
pydantic-settings = "^2.2.1"
autoflake = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
